add signup login page css/add api url fetch

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,20 +1,24 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
+// body {
+//   padding: 50px;
+//   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+// }
 
-a {
-  color: #00b7ff; }
+// a {
+//   color: #00b7ff;
+// }
 
 #form {
   margin: 30px auto;
-  width: 380px; }
+  width: 380px;
+}
 
 #form label {
   color: #666;
   display: inline-block;
   margin-bottom: 10px;
   text-align: center;
-  width: 100%; }
+  width: 100%;
+}
 
 #form input,
 #form button {
@@ -23,7 +27,8 @@ a {
   outline: 0;
   padding: 4px;
   width: 100%;
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+}
 
 #form button {
   background: #43a3e6;
@@ -37,12 +42,14 @@ a {
   text-decoration: none;
   text-transform: uppercase;
   transition: 0.3s ease background;
-  width: 100%; }
+  width: 100%;
+}
 
 #form button:hover {
   background: #fff;
   color: #43a3e6;
-  transition: 0.3s ease background; }
+  transition: 0.3s ease background;
+}
 
 .error-message {
   background: #f02b63;
@@ -50,6 +57,510 @@ a {
   color: #fff;
   margin: 20px auto;
   padding: 20px;
-  width: 100%; }
+  width: 100%;
+}
 
-/*# sourceMappingURL=style.css.map */
+////////////@extend
+
+body {
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-size: 24px;
+  font-weight: 300;
+  overflow-x: hidden;
+  background: black;
+}
+
+h2 {
+  margin-top: 50;
+  font-size: 32px;
+  color: #f0f0f0;
+}
+
+button {
+  background-color: transparent;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  cursor: pointer;
+}
+
+input {
+  background-color: transparent;
+  padding: 0;
+  border: 0;
+  outline: 0;
+}
+
+input[type="submit"] {
+  cursor: pointer;
+}
+
+input::placeholder {
+  font-size: 0.85rem;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+  letter-spacing: 0.1rem;
+  color: #ccc;
+}
+
+/**
+  * Bounce to the left side
+  */
+@keyframes bounceLeft {
+  0% {
+    transform: translate3d(100%, -50%, 0);
+  }
+
+  50% {
+    transform: translate3d(-30px, -50%, 0);
+  }
+
+  100% {
+    transform: translate3d(0, -50%, 0);
+  }
+}
+
+/**
+  * Bounce to the left side
+  */
+@keyframes bounceRight {
+  0% {
+    transform: translate3d(0, -50%, 0);
+  }
+
+  50% {
+    transform: translate3d(calc(100% + 30px), -50%, 0);
+  }
+
+  100% {
+    transform: translate3d(100%, -50%, 0);
+  }
+}
+
+/**
+  * Show Sign Up form
+  */
+@keyframes showSignUp {
+  100% {
+    opacity: 1;
+    visibility: visible;
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+/**
+  * Page background
+  */
+.user {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+
+.user_options-container {
+  position: relative;
+  width: 80%;
+}
+
+.user_options-text {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  /* background-color: rgba(34, 34, 34, 0.85); */
+  border-radius: 3px;
+
+  /* color: #fff; */
+  background: rgba(0, 0, 0, 0.13);
+}
+
+/**
+  * Registered and Unregistered user box and text
+  */
+.user_options-registered,
+.user_options-unregistered {
+  width: 50%;
+  padding: 75px 45px;
+  color: #fff;
+  font-weight: 300;
+}
+
+.user_registered-title,
+.user_unregistered-title {
+  margin-bottom: 15px;
+  font-size: 1.66rem;
+  line-height: 1em;
+}
+
+.user_unregistered-text,
+.user_registered-text {
+  font-size: 0.83rem;
+  line-height: 1.4em;
+}
+
+.user_registered-login,
+.user_unregistered-signup {
+  margin-top: 30px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  padding: 10px 30px;
+  color: #fff;
+  text-transform: uppercase;
+  line-height: 1em;
+  letter-spacing: 0.2rem;
+  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+}
+
+.user_registered-login:hover,
+.user_unregistered-signup:hover {
+  color: rgba(34, 34, 34, 0.85);
+  background-color: #ccc;
+}
+
+/**
+  * Login and signup forms
+  */
+.user_options-forms {
+  position: absolute;
+  top: 50%;
+  left: 30px;
+  width: calc(50% - 30px);
+  min-height: 420px;
+  /* background-color: #fff; */
+  border-radius: 3px;
+  box-shadow: 2px 0 15px rgba(0, 0, 0, 0.25);
+  overflow: hidden;
+  transform: translate3d(100%, -50%, 0);
+  transition: transform 0.4s ease-in-out;
+  color: #fff;
+  background: rgba(0, 0, 0, 0.13);
+}
+
+.user_options-forms .user_forms-login {
+  transition: opacity 0.4s ease-in-out, visibility 0.4s ease-in-out;
+}
+
+.user_options-forms .forms_title {
+  margin-bottom: 45px;
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 1em;
+  text-transform: uppercase;
+  color: #e8716d;
+  letter-spacing: 0.1rem;
+}
+
+.user_options-forms .forms_field:not(:last-of-type) {
+  margin-bottom: 20px;
+}
+
+.user_options-forms .forms_field-input {
+  width: 100%;
+  border-bottom: 1px solid #ccc;
+  padding: 6px 20px 6px 6px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1rem;
+  font-weight: 300;
+  color: gray;
+  letter-spacing: 0.1rem;
+  transition: border-color 0.2s ease-in-out;
+}
+
+/* .user_options-forms .forms_field-input:focus {
+  border-color: gray;
+} */
+
+.user_options-forms .forms_buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 35px;
+}
+
+.user_options-forms .forms_buttons-forgot {
+  font-family: "Montserrat", sans-serif;
+  letter-spacing: 0.1rem;
+  color: #ccc;
+  text-decoration: underline;
+  transition: color 0.2s ease-in-out;
+}
+
+.user_options-forms .forms_buttons-forgot:hover {
+  color: #b3b3b3;
+}
+
+.user_options-forms .forms_buttons-action {
+  background-color: #e8716d;
+  border-radius: 3px;
+  padding: 10px 35px;
+  font-size: 1rem;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.user_options-forms .forms_buttons-action:hover {
+  background-color: #e14641;
+}
+
+.user_options-forms .user_forms-signup,
+.user_options-forms .user_forms-login {
+  position: absolute;
+  top: 70px;
+  left: 40px;
+  width: calc(100% - 80px);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.4s ease-in-out, visibility 0.4s ease-in-out,
+    transform 0.5s ease-in-out;
+}
+
+.user_options-forms .user_forms-signup {
+  transform: translate3d(120px, 0, 0);
+}
+
+.user_options-forms .user_forms-signup .forms_buttons {
+  justify-content: flex-end;
+}
+
+.user_options-forms .user_forms-login {
+  transform: translate3d(0, 0, 0);
+  opacity: 1;
+  visibility: visible;
+}
+
+/**
+  * Triggers
+  */
+.user_options-forms.bounceLeft {
+  animation: bounceLeft 1s forwards;
+}
+
+.user_options-forms.bounceLeft .user_forms-signup {
+  animation: showSignUp 1s forwards;
+}
+
+.user_options-forms.bounceLeft .user_forms-login {
+  opacity: 0;
+  visibility: hidden;
+  transform: translate3d(-120px, 0, 0);
+}
+
+.user_options-forms.bounceRight {
+  animation: bounceRight 1s forwards;
+}
+
+.childsign,
+.childlog {
+  /* -webkit-transition: opacity 600ms, visibility 600ms; */
+  transition: opacity 6000ms, visibility 6000ms;
+}
+
+/**
+  * Responsive 990px
+  */
+@media screen and (max-width: 990px) {
+  .user_options-forms {
+    min-height: 350px;
+  }
+
+  .user_options-forms .forms_buttons {
+    flex-direction: column;
+  }
+
+  .user_options-forms .user_forms-login .forms_buttons-action {
+    margin-top: 30px;
+  }
+
+  .user_options-forms .user_forms-signup,
+  .user_options-forms .user_forms-login {
+    top: 40px;
+  }
+
+  .user_options-registered,
+  .user_options-unregistered {
+    padding: 50px 45px;
+  }
+
+  /* .user_options-unregistered {
+    display: block;
+  } */
+
+  #hide {
+    display: none;
+  }
+
+  #show {
+    display: block;
+  }
+}
+
+fieldset,
+img {
+  border: 0;
+}
+
+input {
+  border: 1px solid #b0b0b0;
+  padding: 3px 5px 4px;
+  color: #979797;
+  width: 190px;
+}
+
+#particles-js {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  width: 100%;
+  height: 99%;
+  /* background: black; */
+}
+
+.cb-slideshow-text-container {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+}
+
+.tm-content {
+  z-index: 1001;
+  width: 50%;
+}
+
+.footer-link {
+  margin: 20px;
+  font-size: 18px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  color: white;
+  text-align: center;
+  width: 100%;
+  z-index: 1001;
+}
+
+/* Animation */
+.cb-slideshow,
+.cb-slideshow:after {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: 0;
+}
+
+.cb-slideshow li {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  color: transparent;
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: none;
+  opacity: 0;
+  z-index: 0;
+  -webkit-backface-visibility: hidden;
+  -webkit-animation: imageAnimation 72s linear infinite 0s;
+  -moz-animation: imageAnimation 72s linear infinite 0s;
+  -o-animation: imageAnimation 72s linear infinite 0s;
+  -ms-animation: imageAnimation 72s linear infinite 0s;
+  animation: imageAnimation 72s linear infinite 0s;
+}
+
+.cb-slideshow li:nth-child(1) {
+  background-image: url(../images/galaxy_bg_01.jpg);
+}
+
+.cb-slideshow li:nth-child(2) {
+  background-image: url(../images/galaxy_bg_02.jpg);
+  -webkit-animation-delay: 12s;
+  -moz-animation-delay: 12s;
+  -o-animation-delay: 12s;
+  -ms-animation-delay: 12s;
+  animation-delay: 12s;
+}
+
+.cb-slideshow li:nth-child(3) {
+  background-image: url(../images/galaxy_bg_03.jpg);
+  -webkit-animation-delay: 24s;
+  -moz-animation-delay: 24s;
+  -o-animation-delay: 24s;
+  -ms-animation-delay: 24s;
+  animation-delay: 24s;
+}
+
+.cb-slideshow li:nth-child(4) {
+  background-image: url(../images/galaxy.jpg);
+  animation-delay: 36s;
+}
+
+.cb-slideshow li:nth-child(5) {
+  background-image: url(../images/letter_bg_02.jpg);
+  animation-delay: 48s;
+}
+
+.cb-slideshow li:nth-child(6) {
+  background-image: url(../images/letter_bg_03.jpg);
+  animation-delay: 60s;
+}
+
+@keyframes imageAnimation {
+  0% {
+    opacity: 0;
+    animation-timing-function: ease-in;
+  }
+
+  8% {
+    opacity: 1;
+    transform: scale(1.15);
+    animation-timing-function: ease-out;
+  }
+
+  17% {
+    opacity: 1;
+    transform: scale(1.2);
+  }
+
+  25% {
+    opacity: 0;
+    transform: scale(1.4);
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+@media screen and (max-width: 1140px) {
+  .cb-slideshow li div h3 {
+    font-size: 140px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .cb-slideshow li div h3 {
+    font-size: 80px;
+  }
+
+  .tm-content {
+    margin-top: 80px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .cb-slideshow li div h3 {
+    font-size: 80px;
+  }
+
+  .tm-btn-subscribe {
+    margin-top: 20px;
+  }
+}
