--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,6 +9,7 @@
 </head>
 <body>
   {{{body}}}
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script src="/javascripts/script.js"></script>
 </body>
 </html>
