--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -3,6 +3,8 @@
 <a href="/users/list">list of other users</a>
 <a href="/profile/logout">Logout</a>
 <a href="/profile/search">search for friends</a>
+
+<button><a href="/api/rover">rover</a></button>
 {{/if}}
 
 {{#with profileOwner}}
